istio-mtls/istio-auth/vs-gatewat-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "virtual-service-gateway-mtls"
spec:
  hosts:
  - "mercurpayments.com"
  gateways:
  - "mercurpay-mtls-gateway"
  http:
  - match:
    - uri:
        prefix: /api/transactions
    route:
    - destination:
        host: "payments.payments-mtls.svc.cluster.local"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/orders
    route:
    - destination:
        host: "crm.payments-mtls.svc.cluster.local"
        port:
          number: 8080
